--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,14 @@
 .hidden { 
     display: none;
 }
+
+#bar { 
+    margin-right: 10px;
+}
+
+.button { 
+    border: 2px solid gray;
+    border-radius: 10px;
+}
+
+ 
