--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,9 +6,19 @@
     margin-right: 10px;
 }
 
-.button { 
+.logout-button { 
     border: 2px solid gray;
     border-radius: 10px;
 }
 
- 
+.button-navigation { 
+    width: 80px;
+    border: solid 2px;
+    border-radius: 15px;
+}
+
+.profile-button { 
+    width: 80px;
+    border: solid 2px;
+    border-radius: 15px;
+}
