--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -15,10 +15,16 @@
     width: 80px;
     border: solid 2px;
     border-radius: 15px;
+    
 }
 
 .profile-button { 
     width: 80px;
     border: solid 2px;
     border-radius: 15px;
+}
+
+.login-page { 
+    display: flex;
+    justify-content: end;
 }
