created psudocode for spot form

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -28,3 +28,13 @@
     display: flex;
     justify-content: end;
 }
+
+.profile-container { 
+    display: flex;
+    justify-content: end;
+}
+
+.main-container { 
+    display: flex;
+    justify-content: end;
+}
