--- a/frontend/src/components/CreateSpot/CreateSpot.css
+++ b/frontend/src/components/CreateSpot/CreateSpot.css
@@ -3,3 +3,9 @@ label {
     flex-direction: column;
     margin-bottom: 10px; /* Adds some space after each label */
   }
+
+  .image-url { 
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px; /* Adds some space after each label */
+  }
