--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -15,6 +15,7 @@
     width: 80px;
     border: solid 2px;
     border-radius: 15px;
+
     
 }
 
@@ -38,3 +39,55 @@
     display: flex;
     justify-content: end;
 }
+
+
+
+
+
+
+
+
+/* //navigation.jsx  */
+
+
+/* CSS for the navigation bar */
+
+
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+
+  
+  /* Dropdown menu styles */
+  .profile-dropdown {
+    position: absolute;
+    top: 60px; 
+    right: 1px;
+    z-index: 1000; 
+    border: 2px solid black;
+  }
+  
+
+
+  
+
+  
+  .profile-dropdown li button {
+    
+    background: white;
+    color: black;
+    border: none; 
+    text-align: left; 
+    padding-left: 0; 
+    font-size: 10px;
+    height: px;
+    width: 90px;
+
+  }
+  
+
