--- a/frontend/src/components/CurrentSpot/CurrentSpot.css
+++ b/frontend/src/components/CurrentSpot/CurrentSpot.css
@@ -1,5 +1,14 @@
 
+.main-current-container { 
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 20px;
+}
 
+img { 
+    width: 90%;
+    height: 50%;
+}
 
 .update-delete-button { 
     display: flex;
