--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -66,10 +66,11 @@
   /* Dropdown menu styles */
   .profile-dropdown {
     position: absolute;
-    top: 60px; 
+    top: 40px; 
     right: 1px;
     z-index: 1000; 
     border: 2px solid black;
+    
   }
   
 
@@ -86,8 +87,13 @@
     padding-left: 0; 
     font-size: 10px;
     height: px;
-    width: 90px;
+    
 
   }
   
+
+  ul {
+    list-style-type: none; /* Remove bullet points */
+   
+}
 
