--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -1,11 +1,13 @@
 .image-container {
     display: grid;
     grid-template-columns: 1fr 1fr; /* Split the container into two columns */
+    
 }
 
-.main-image {
-    grid-column: 1 / 2; /* Main image occupies the first column */
-    grid-row: 1 / 3; /* Main image stretches across two rows */
+
+.main-image { 
+    grid-column: 1 / 2; 
+    grid-row: 1 / 1;
 }
 
 .main-image img {
@@ -25,29 +27,25 @@
 
 .small-images img {
     width: 100%; /* Full width of the container */
-    height: 400px;
+    height: 200px;
     object-fit: cover; /* Adjusts the image to cover the element's box */
 }
 
 
 .price { 
     display: flex;
-    gap: 50px;
-
+ 
 }
 
-.second { 
-    border: 2px solid;
-    border-radius: 10px;
-    display: inline-block;
-    padding: 10px 48px;
-    margin-top: 20px;
+  
+.nightt {
+    
+    margin-left: 30px;
+    
 }
-
-.night { 
-    font-size: large;
-}
-
+.nightt span {
+    font-size: 0.7rem; /* Adjust this value to make the 'night' text smaller or keep it at the base size */
+  }
 button {
     display: block;
     background-color: red;
@@ -67,4 +65,33 @@ button {
 
 .reserve-button { 
     width: 350px;
+    height: 40px;
+    margin-top: 20px;
+}
+
+.spot-details-container {
+    max-width: 1000px; /* Set maximum width */
+    margin: 0 auto; /* Center the container */
+    padding: 0 auto;
+  }
+
+  .star-review { 
+    position: absolute;
+    padding-left:90px;
+  }
+
+
+
+  /* Scale down the text inside the .second container */
+.second h2, .second h3, .second .night {
+    font-size: 0.9rem; /* or any smaller size that fits your design */
+  }
+  
+
+.second { 
+    border: 2px solid black;
+    margin-top: 20px;
+    padding: 20px 20px;
+    border-radius: 15px;
+   
 }
