--- a/frontend/src/components/ListOfSpots/ListOfSpots.css
+++ b/frontend/src/components/ListOfSpots/ListOfSpots.css
@@ -11,6 +11,7 @@
     width: 80%; /* Make images responsive */
     height: auto; /* Maintain aspect ratio */
     display: block; /* Remove any extra space below the image */
+    margin-top: 100px;
 }
 
 .grid-item {
