--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -47,10 +47,10 @@ h1 {
 }
 
 .demo-user { 
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 100px;
+
   border: none;
   background: none;
-  color: black;
+  color: blue;
   text-decoration: underline;
 }
