--- a/frontend/src/components/CurrentSpot/CurrentSpot.css
+++ b/frontend/src/components/CurrentSpot/CurrentSpot.css
@@ -1,22 +1,121 @@
-
-.main-current-container { 
+.image-container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 20px;
-     
-}
-
-img { 
-    width: 90%;
-    height: 50%;
+    grid-template-columns: 1fr 1fr; /* Split the container into two columns */
     
 }
 
+
+.main-image { 
+    grid-column: 1 / 2; 
+    grid-row: 1 / 1;
+}
+
+.main-image img {
+    width: 99%; /* Full width of the container */
+    height: 99%; /* Full height, adjust if necessary */
+    object-fit: cover; /* Adjusts the image to cover the element's box */
+}
+
+.small-images {
+    grid-column: 2 / 3; /* Small images occupy the second column */
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two smaller images per row */
+    grid-template-rows: 1fr 1fr; /* Two rows of smaller images */
+    grid-gap: 10px; /* Space between smaller images */
+    
+}
+
+.small-images img {
+    width: 100%; /* Full width of the container */
+    height: 200px;
+    object-fit: cover; /* Adjusts the image to cover the element's box */
+}
+
+
+.price { 
+    display: flex;
+ 
+}
+
+  
+.nightt {
+    
+    margin-left: 30px;
+    
+}
+.nightt span {
+    font-size: 0.7rem; /* Adjust this value to make the 'night' text smaller or keep it at the base size */
+  }
+button {
+    display: block;
+    background-color: red;
+    color: white;
+    box-shadow: 3px 3px black;
+}
+
+.name-review { 
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.numRev { 
+    margin-left: 20px; /* Adjust the value as needed */
+}
+
+.reserve-button { 
+    width: 350px;
+    height: 40px;
+    margin-top: 20px;
+}
+
+.spot-details-container {
+    max-width: 1000px; /* Set maximum width */
+    margin: 0 auto; /* Center the container */
+    padding: 0 auto;
+  }
+
+  .star-review { 
+    position: absolute;
+    padding-left:90px;
+  }
+
+
+
+  /* Scale down the text inside the .second container */
+.second h2, .second h3, .second .night {
+    font-size: 0.9rem; /* or any smaller size that fits your design */
+  }
+  
+
+.second { 
+    border: 2px solid black;
+    margin-top: 20px;
+    padding: 20px 20px;
+    border-radius: 15px;
+   
+}
 .update-delete-button { 
     display: flex;
+    margin-top: 25px;
+    margin-left: -30px;  
+   
+    
     
 }
 
 button { 
     width: 90px;
+    cursor: pointer;
+}
+
+.manage { 
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-left: 30px;
+}
+
+.create-current-button { 
+    width: 170px;
 }
