--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -15,22 +15,27 @@
     width: 80px;
     border: solid 2px;
     border-radius: 15px;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 30px;
     cursor: pointer;
-   
+    background-color: purple;
 }
 
 .profile-button { 
     width: 80px;
     border: solid 2px;
     border-radius: 15px;
+    background-color: purple;
+    margin-right: 30px;
+    margin-top: -9px;
+    
 }
 
 .login-page { 
     position: relative; /* Add this line */
     display: flex;
     justify-content: end;
+    
     
 }
 
@@ -99,25 +104,21 @@
 }
 
 .logo-link {
-    z-index: 1001;
-    margin-top: 25px;
-    display: flex;
     text-decoration: none;
     
   }
   
-  .fa-airbnb {
+  #peace-logo {
     font-size: 24px; /* Adjust this value as needed */
-    color: red;
-    
+    color: purple;
   }
   
   .logo-text {
     margin-left: 8px; /* Space between logo and text */
     font-size: 20px; /* Adjust this value as needed */
-    color: red;
+    color: black;
     font-weight: bold; /* Text color, adjust as needed */
-
+    color: purple;
   } 
 
 
@@ -148,9 +149,10 @@ li {
   margin-right: 20px;
 }
 .list { 
-  border: 2px black solid;
-
+  border: 1px black solid;
   padding: 10px 10px;
+  margin-top: -2px;
+  margin-right: 30px;
 }
 
 
@@ -166,4 +168,13 @@ li {
 
 .manage-spots-button { 
   cursor: pointer;
+}
+
+.nav-container { 
+  margin-top: 60px;
+}
+
+
+.create-navlink {
+  padding-right: 40px;
 }
