last commit of css and errors

--- a/frontend/src/components/DeleteSpot/DeleteSpot.css
+++ b/frontend/src/components/DeleteSpot/DeleteSpot.css
@@ -22,9 +22,11 @@
     padding: 6px;
     margin-left: -4px;
     height: 40px;
+    cursor: pointer;
 }
 
 .modal-button.cancel {
     background-color: grey;
+    cursor: pointer;
 }
 
