--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -32,6 +32,8 @@ h1 {
     width: 250px;
     padding: 10px;
     margin-left: 0px;
+    cursor: pointer;
+
 
 }
 
@@ -52,6 +54,8 @@ h1 {
   background: none;
   color: blue;
   text-decoration: underline;
+  cursor: pointer;
+
 }
 
 .login-err { 
