--- a/frontend/src/components/PostReview/PostReview.css
+++ b/frontend/src/components/PostReview/PostReview.css
@@ -7,6 +7,7 @@ textarea {
     width: 500px;
     margin-bottom: 20px;
     height: 40px;
+    cursor: pointer;
 }
 .submit-post-button:disabled { 
   background-color: grey;
